Changed z-index of LSFilter dropdowns to not hide main-menu. Fixes #8309

--- a/modules/lsfilter/views/css/sass/LSFilterStyle.sass
+++ b/modules/lsfilter/views/css/sass/LSFilterStyle.sass
@@ -18,7 +18,7 @@
   /* topbar + extra toolbar height */
   right: 6px
   /* Attach to right corner */
-  z-index: 10
+  z-index: 1
   max-height: 500px
   overflow: auto
   display: none
